--- a/templates/register.html
+++ b/templates/register.html
@@ -3,13 +3,16 @@
 {% block main_content %}
 <h1>Register</h1>
 <form method="POST">
-        {{ form.hidden_tag() }}
-        {{ form.email.label }} {{ form.email() }}<br>
-        {{ form.username.label }} {{ form.username() }}<br>
-        {{ form.password.label }} {{ form.password() }}<br>
-        {{ form.confirm.label }} {{ form.confirm() }}<br>
-        {{ form.submit() }}
-    </form>
+    {{ form.hidden_tag() }}
+    {{ form.email.label }} {{ form.email() }}<br>
+    {{ form.username.label }} {{ form.username() }}<br>
+    {{ form.password.label }} {{ form.password() }}<br>
+    {{ form.confirm.label }} {{ form.confirm() }}<br>
+    {{ form.submit() }}
+</form>
+{% for message in get_flashed_messages() %}
+<h3>{{ message }}</h3>
+{% endfor %}
 {% endblock %}
 
 {% block navigation %}
