--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,14 @@
 	{{ form.searchterm.label }} {{ form.searchterm() }}
 	{{ form.submit() }}
 </form>
+<h3>{{current_user.username}}'s Search History:</h3>
+{% for value in user_search_history %}
+<p>- {{value.searchterm}}</p>
+{% endfor %}
+<h3>Recently Saved Images by the Community</h3>
+{% for img in recent_saved_images %}
+<img src={{img.imageURL}}>
+{% endfor %}
 {% endblock %}
 
 {% block navigation %}
