fix bugs with display issues and no members in the users database made things more pretty and user friendly

--- a/templates/addtofavorites.html
+++ b/templates/addtofavorites.html
@@ -1,7 +1,7 @@
 {% extends 'index.html' %}
 
 {% block main_content %}
-<h1>Add to Favorites</h1>
+<h1>Click on the folder you want to add the image</h1>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.3/jquery.min.js"></script>
 <script type="text/javascript">
     function add_to_folder(foldername){
