--- a/templates/foundimages.html
+++ b/templates/foundimages.html
@@ -14,6 +14,17 @@
     margin: 0 auto;
     display: flow-root;
     max-height: 170px;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;  
+}
+.image_display:hover{
+    -ms-transform: scale(1.07, 1.07); /* IE 9 */
+    -webkit-transform: scale(1.07, 1.07); /* Safari */
+    transform: scale(1.07, 1.07);
+    -webkit-filter: brightness(1.0);
+    filter: brightness(1.0);
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;  
 }
 .form_display{
     margin: 3%;
