--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,11 @@
 	{{ form.searchterm.label }} {{ form.searchterm() }}
 	{{ form.submit() }}
 </form>
+{% if current_user.is_authenticated %}
 <h3>{{current_user.username}}'s Search History:</h3>
+{% else %}
+<h3>Public Search History</h3>
+{% endif %}
 {% for value in user_search_history %}
 <p>- {{value.searchterm}}</p>
 {% endfor %}
