--- a/templates/userfolders.html
+++ b/templates/userfolders.html
@@ -20,13 +20,24 @@ textarea:focus, input:focus{
     margin: 0 auto;
     display: flow-root;
 }
+.animate{
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;  
+}
+.animate:hover{
+    -ms-transform: scale(1.20, 1.20); /* IE 9 */
+    -webkit-transform: scale(1.20, 1.20); /* Safari */
+    transform: scale(1.20, 1.20);
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;  
+}
 </style>
 {% if user_folders|length > 0 %}
 <div class="wrapper">
     {% for folder in user_folders %}
     <div style="float: left;">
         <a href="{{url_for('open_folder', foldername=folder.name)}}" style="color:black;">
-            <div style="width:50px;height:50px;position:relative;margin: 5px 40px;">
+            <div style="width:50px;height:50px;position:relative;margin: 5px 40px;" class="animate">
                 <h3 style="margin:auto; left:50%;top:50%; transform:translate(-50%); position: absolute;">{{folder.name}}</h3>
                 <img src="https://cdn0.iconfinder.com/data/icons/small-n-flat/24/678084-folder-512.png" style="width:50px;margin:0;">
             </div>
